# cutekeyboard

./: CMakeLists.txt
example/: CMakeLists.txt  main.qml
src/: CMakeLists.txt  CMakeListsOOk.txt  src.pro
src/.qmake2cmake/: subdir-of
src/CuteKeyboard/: EnterKey.qml
src/qml/: AlternativeKeysPopup.qml  BackspaceKey.qml  CsLayout.qml  DeLayout.qml  DigitsLayout.qml  ElLayout.qml  EnLayout.qml  EnterKey.qml  EsLayout.qml  FrLayout.qml  HideKey.qml  InputPanel.qml  ItLayout.qml  Key.qml  KeyModel.qml  KeyPopup.qml  NlLayout.qml  PlLayout.qml  PtLayout.qml  QwertyLayout.qml  ShiftKey.qml  SpaceKey.qml  SymbolKey.qml  SymbolLayout.qml
